fixed header jump

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
 	min-height: 100%;
 	margin: 0px;
+	min-width: 1440px;
 }
 
 h1 {
